# Copyright © 2026 Chee Bin HOH. All rights reserved.

add_executable(copy            copy.c)
add_executable(copystdio       copystdio.c)
add_executable(helloprocess    helloprocess.c)
add_executable(listdir         listdir.c)
add_executable(generateNumbers generateNumbers.c)
add_executable(readGeneratedNumbers readGeneratedNumbers.c)
